# pac

./: AUTHORS  Makefile.am  Makefile.in  NEWS  README  TODO  bootstrap  configure.in
PLUGIN/: REQ
src/: Makefile  Makefile.am  Makefile.in  creature_common.c  creature_common.h  creature_ghosts.c  creature_ghosts.h  creature_pac.c  creature_pac.h  d2_alloc.c  d2_alloc.h  default.h  ghost.c  ghost.h  gui-ncurses.c  gui.c  gui.h  gui_unix_ncurses.c  gui_unix_ncurses.h  init-creatures.c  init-creatures.h  main.c  main.h  misc.c  misc.h  move.c  move.h  pac.c  pac.h  pacman.c  pacman.h  read_layout.c  read_layout.h  score.c  score.h
src/PLUGIN/: REQ
src/maps/: level-1.pac  original.pac
