dnl Process this file with autoconf to produce a configure script.
AC_INIT(pac, 0.2.2, stig@brautaset.org)
AC_CONFIG_SRCDIR(src/pac.c)		dnl my sources are here
AC_CONFIG_AUX_DIR(config)		dnl install-sh etc stored here

AM_CONFIG_HEADER(config/config.h)	dnl the name of the header file
AM_INIT_AUTOMAKE			dnl needs to come after above cruft
AM_MAINTAINER_MODE			dnl I'm a power user ;)

# Checks for programs.
AC_PROG_AWK
AC_PROG_CC
AC_PROG_INSTALL
AC_PROG_LN_S

# libraries
AC_SEARCH_LIBS(can_change_color, ncurses curses,,
	       [echo "Error: (n)curses is required!" && exit 1])

# this is were the maps are stored.
AC_DEFINE_DIR(MAP_DIR, datadir/pac, [where maps are stored])

# header files
AC_HEADER_STDC
AC_CHECK_HEADERS(stdlib.h string.h unistd.h ncurses.h curses.h)

# Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST

# Checks for library functions.
AC_FUNC_MALLOC
AC_CHECK_FUNCS([atexit strchr usleep])

# Create makefile
AC_CONFIG_FILES([Makefile src/Makefile])
AC_OUTPUT
