bin_PROGRAMS = pac
pac_SOURCES = d2_alloc.c ghost.c gui.c gui-ncurses.c init-creatures.c main.c misc.c move.c pacman.c read_layout.c score.c d2_alloc.h ghost.h gui.h gui-ncurses.h init-creatures.h main.h misc.h move.h pacman.h read_layout.h score.h 

pkgdata_DATA = layout.dat
EXTRA_DIST = layout.dat
