bin_PROGRAMS = pac
pac_SOURCES = creature_common.c creature_ghosts.c creature_pac.c d2_alloc.c gui.c gui_unix_ncurses.c pac.c read_layout.c score.c creature_common.h creature_ghosts.h creature_pac.h d2_alloc.h gui.h gui_unix_ncurses.h pac.h read_layout.h score.h

pkgdata_DATA = layout.dat
EXTRA_DIST = layout.dat

CPPFLAGS = -W -Wall
